[package]
name = "gourl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = "0.7.2"
